[BUG] Fix animation does not work on mobile device and some other minor refacotrs

--- a/stylesheets/css/site.css
+++ b/stylesheets/css/site.css
@@ -1,34 +1,11 @@
-body {
-  font-size: 16px;
-  margin: 0;
-  font-family: 'Lato-Light', Helvetica, Georgia;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
+body { font-size: 16px; margin: 0; font-family: 'Lato-Light', Helvetica, Georgia; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-ul {
-  padding-left: 0; }
+ul { padding-left: 0; }
 
-.header {
-  width: 100%;
-  height: 9em;
-  background: #12acef;
-  color: white;
-  margin-bottom: 2em;
-  font-family: 'ShadowsIntoLight', Helvetica, Georgia; }
+.header { width: 100%; height: 9em; background: #12acef; color: white; margin-bottom: 2em; font-family: 'ShadowsIntoLight', Helvetica, Georgia; }
 
-.header__title {
-  font-size: 4em;
-  margin: 0;
-  text-align: center;
-  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); }
+.header__title { font-size: 4em; margin: 0; text-align: center; text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); }
 
-.header__subtitle {
-  font-size: 1.2em;
-  text-align: center;
-  margin: 0; }
+.header__subtitle { font-size: 1.2em; text-align: center; margin: 0; }
 
 /*# sourceMappingURL=site.css.map */
